@@ -33,46 +33,30 @@
     SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */
 /**************************************************************************/
-#include <stdlib.h>
-#include <stdio.h>
-#include <string.h>
-
 #include "projectconfig.h"
 #include "sysinit.h"
 
 #include "core/gpio/gpio.h"
-#include "core/systick/systick.h"
 
-#ifdef CFG_INTERFACE
-  #include "core/cmd/cmd.h"
+#if defined CFG_CHIBI && defined CFG_SDCARD 
+  #include <string.h>
+  #include <stdlib.h>
+  #include "drivers/chibi/chb.h"
+  #include "drivers/chibi/chb_drvr.h"
+  #include "drivers/chibi/chb_libpcap.h"
+  static chb_rx_data_t rx_data;
 #endif
 
 /**************************************************************************/
 /*! 
-    Approximates a 1 millisecond delay using "nop".  This is less
-    accurate than a dedicated timer, but is useful in certain situations.
-
-    The number of ticks to delay depends on the optimisation level set
-    when compiling (-O).  Depending on the compiler settings, one of the
-    two defined values for 'delay' should be used.
-*/
-/**************************************************************************/
-void delayms(uint32_t ms)
-{
-  uint32_t delay = ms * ((CFG_CPU_CCLK / 100) / 45);      // Release Mode (-Os)
-  // uint32_t delay = ms * ((CFG_CPU_CCLK / 100) / 120);  // Debug Mode (No optimisations)
-
-  while (delay > 0)
-  {
-    __asm volatile ("nop");
-    delay--;
-  }
-}
-
-/**************************************************************************/
-/*! 
-    Main program entry point.  After reset, normal code execution will
-    begin here.
+    Use Chibi as a wireless sniffer and write all captured frames
+    to the SD card in libpcap format
+  
+    projectconfig.h settings:
+    --------------------------------------------------
+    CFG_CHIBI, CFG_SDCARD -> Enabled
+    CFG_CHIBI_PROMISCUOUS -> 1
+    CFG_CHIBI_BUFFERSIZE  -> 1024   
 */
 /**************************************************************************/
 int main(void)
@@ -80,31 +64,57 @@ int main(void)
   // Configure cpu and mandatory peripherals
   systemInit();
 
-  uint32_t currentSecond, lastSecond;
-  currentSecond = lastSecond = 0;
+  #if defined CFG_CHIBI && defined CFG_SDCARD && CFG_CHIBI_PROMISCUOUS != 0
+    // Get a reference to the Chibi peripheral control block
+    chb_pcb_t *pcb = chb_get_pcb();
 
-  while (1)
-  {
-    // Toggle LED once per second ... rollover = 136 years :)
-    currentSecond = systickGetSecondsActive();
-    if (currentSecond != lastSecond)
+    // Create a binary file to store captured data
+    libpcap_error_t error;
+    error = libpcapInit("/capture.cap");
+    if (error)
     {
-      lastSecond = currentSecond;
-      if (gpioGetValue(CFG_LED_PORT, CFG_LED_PIN) == CFG_LED_OFF)
+      // Something happened trying to create the file or access the SD card
+      switch (error)
       {
-        gpioSetValue (CFG_LED_PORT, CFG_LED_PIN, CFG_LED_ON); 
+        case LIBPCAP_ERROR_FATFS_NODISK:
+          printf("No Disk\r\n");
+          break;
+        case LIBPCAP_ERROR_FATFS_INITFAILED:
+          printf("Init Failed\r\n");
+          break;
+        case LIBPCAP_ERROR_FATFS_FAILEDTOMOUNTDRIVE:
+          printf("Failed to mount drive\r\n");
+          break;
+        case LIBPCAP_ERROR_FATFS_UNABLETOCREATEFILE:
+          printf("Unable to create file\r\n");
+          break;
       }
-      else
-      {
-        gpioSetValue (CFG_LED_PORT, CFG_LED_PIN, CFG_LED_OFF); 
+      
+      // Quit the program
+      return -1;
+    }
+    
+    // Wait for incoming frames and log them to disk in libpcap format.
+    while(1)
+    {
+      // Check for incoming messages 
+      while (pcb->data_rcv) 
+      { 
+        // get the length of the data
+        rx_data.len = chb_read(&rx_data);
+        // make sure the length is non-zero
+        if (rx_data.len)
+        {
+          // Enable LED to indicate message reception 
+          gpioSetValue (CFG_LED_PORT, CFG_LED_PIN, CFG_LED_ON); 
+          // Write frame content to disk
+          libpcapWriteFrame(rx_data.data, rx_data.len);
+          // Disable LED
+          gpioSetValue (CFG_LED_PORT, CFG_LED_PIN, CFG_LED_OFF); 
+        }
       }
     }
-
-    // Poll for CLI input if CFG_INTERFACE is enabled in projectconfig.h
-    #ifdef CFG_INTERFACE 
-      cmdPoll(); 
-    #endif
-  }
+  #endif
 
   return 0;
 }
