@@ -1,0 +1,1 @@
+Shows a basic example of sending commands to the LPC1343 TFT LCD using UART.
