@@ -1,6 +1,8 @@
 v0.60 - Ongoing
 ===============
 
+- Added a number of examples to the
+  'tools/examples' folder.
 - Modified Crossworks project to build with
   stdio/printf in 'core/lib' (saves about
   1.5-2K in release mode)
